# mika-idf

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  applytemplate.bat  build_log.txt  partitions.csv  sdkconfig  sdkconfig.old
components/ui/: CMakeLists.txt
components/ui/src/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/src/components/: ui_comp_hook.c
components/ui/src/images/: ui_img_1224885811.c  ui_img_1779231396.c  ui_img_1799517327.c  ui_img_1898897582.c  ui_img_1947372027.c  ui_img_1997223691.c  ui_img_267335790.c  ui_img_295812069.c  ui_img_821000619.c  ui_img_check_png.c  ui_img_images_backgroundimage1_png.c  ui_img_wifi_png.c
components/ui/src/screens/: ui_BackgroundScreen.c  ui_Screen1.c  (+9 more)
main/: AudioPlayer.cpp  CMakeLists.txt  Kconfig.projbuild  UIController.cpp  WiFiManager.h  idf_component.yml  lv_conf.h  main.cpp
main/impl/: BackgroundController.cpp  FileHandle.cpp  MainScreenUIController.cpp  SettingsController.cpp  SpiffsFS.cpp  WiFiManager.cpp  WifiConfiguration.cpp  WifiConnectController.cpp
main/include/: BackgroundController.h  FileHandle.h  FileStorage.h  MainScreenUIController.h  RadioStations.h  SettingsController.h  SpiffsFS.h  UIController.h  WebRadio.h  WiFiManager.h  WifiConfiguration.h  WifiConnectController.h
main/resources/wifi/: pass.txt  ssid.txt
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_1224885811.c  ui_img_1779231396.c  ui_img_1898897582.c  ui_img_1947372027.c  ui_img_1997223691.c  ui_img_295812069.c  ui_img_821000619.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_bg4_png.c  ui_img_wifi_png.c  ui_img_x_png.c
main/ui/screens/: ui_BackgroundScreen.c  ui_BackgroundScreen.h  ui_MusicScreen.c  ui_MusicScreen.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_WifiConnectScreen.h
(+61 files in other folders)
